# ChangeLog for dev-java/openjdk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  files/cpuid-fomit-frame-pointer.patch, files/dynamic-libstdc++.patch,
  files/gettimeofday-declaration.patch, openjdk-1.7.0.0_alpha14.ebuild:
  Add back keywords as this works just fine when you build it against the same
  version of sun-jdk. Also comment on some patches about where they came from.

*openjdk-1.7.0.0_alpha14 (22 Jun 2007)

  22 Jun 2007; Petteri Räty <betelgeuse@gentoo.org> 
  +openjdk-1.7.0.0_alpha14.ebuild,
  +files/b14-gcc4.patch, +files/execstack.patch,
  +files/external-libXinerama.patch, +files/fontconfig-directlink.patch,
  +files/icedtea-text-relocations.patch, +files/tempname-free.patch:
  Version bump. Uses external libXinerama, fixes text relocations, can use
  fontconfig via direct linking instead of dlopening with the fontconfig USE
  flag.

  20 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/dynamic-libstdc++.patch, openjdk-1.7.0.0_alpha13.ebuild:
  Always link libstdc++ dynamically.

  08 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha13.ebuild, +files/cpuid-fomit-frame-pointer.patch,
  files/external-zlib.patch, +files/external-zlib-splash.patch,
  files/gettimeofday-declaration.patch, files/lesstif.patch:
  Build and install platform javadocs with the doc use flag, enable user
  CFLAGS over build system, update the zlib patches to be split in two and
  make FULL_VERSION static so that ccache works properly.

  30 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha13.ebuild:
  Fix jre/bin executable permission marking.

  27 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha13.ebuild:
  My permission handling wasn't working for directories.

  26 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  openjdk-1.7.0.0_alpha13.ebuild: